--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,7 +1,5 @@
 {
-    "/assets/js/min/editor.js": "/assets/js/min/editor.js?id=5f621f16f5d41fd0144a",
-    "/assets/css/main.css": "/assets/css/main.css?id=b0826a0c51d3ed72226f",
-    "/assets/css/editor.css": "/assets/css/editor.css?id=43b03fe9462924903381",
-    "/assets/css/woocommerce.css": "/assets/css/woocommerce.css?id=f115b2ab7322d1a1f01d",
-    "/assets/js/min/main.js": "/assets/js/min/main.js?id=30f1fa09399961f75123"
+    "/assets/css/main.css": "/assets/css/main.css",
+    "/assets/css/editor.css": "/assets/css/editor.css",
+    "/assets/css/woocommerce.css": "/assets/css/woocommerce.css"
 }
